# substrate-smart-contracts

./: README.md
simple_contract/: Cargo.toml  lib.rs
